WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
175619
[WebCrypto] Push WorkQueue dispatches for EC algorithms into shared code
https://bugs.webkit.org/show_bug.cgi?id=175619
Summary
[WebCrypto] Push WorkQueue dispatches for EC algorithms into shared code
Zan Dobersek
Reported
2017-08-15 21:56:20 PDT
SSIA.
Attachments
WIP patch
(23.77 KB, patch)
2017-08-15 22:02 PDT
,
Zan Dobersek
no flags
Details
Formatted Diff
Diff
Patch
(24.66 KB, patch)
2017-08-17 23:44 PDT
,
Zan Dobersek
no flags
Details
Formatted Diff
Diff
Patch
(24.48 KB, patch)
2017-08-21 04:13 PDT
,
Zan Dobersek
no flags
Details
Formatted Diff
Diff
Patch
(22.53 KB, patch)
2017-08-25 01:00 PDT
,
Zan Dobersek
no flags
Details
Formatted Diff
Diff
Patch for landing
(22.65 KB, patch)
2017-08-29 01:06 PDT
,
Zan Dobersek
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Zan Dobersek
Comment 1
2017-08-15 22:02:51 PDT
Created
attachment 318228
[details]
WIP patch
Build Bot
Comment 2
2017-08-15 22:05:24 PDT
Attachment 318228
[details]
did not pass style-queue: ERROR: Source/WebCore/ChangeLog:8: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 10 files If any of these errors are false positives, please file a bug against check-webkit-style.
Zan Dobersek
Comment 3
2017-08-17 23:44:32 PDT
Created
attachment 318479
[details]
Patch Ready for review.
Zan Dobersek
Comment 4
2017-08-21 04:13:30 PDT
Created
attachment 318624
[details]
Patch
Zan Dobersek
Comment 5
2017-08-25 01:00:10 PDT
Created
attachment 319069
[details]
Patch
Jiewen Tan
Comment 6
2017-08-28 11:43:37 PDT
Comment on
attachment 319069
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=319069&action=review
Looks good to me. r=me. Good job.
> Source/WebCore/crypto/algorithms/CryptoAlgorithmECDH.cpp:117 > + context.ref();
It maybe better to add a comment here to state that this is the only special case that we have this unifiedCallback. Therefore, we cannot utilize the dispatchOperation infrastructure, and it is not necessary to make one for it.
Zan Dobersek
Comment 7
2017-08-29 01:06:52 PDT
Created
attachment 319249
[details]
Patch for landing
Zan Dobersek
Comment 8
2017-08-29 04:29:59 PDT
Comment on
attachment 319249
[details]
Patch for landing Clearing flags on attachment: 319249 Committed
r221293
: <
http://trac.webkit.org/changeset/221293
>
Zan Dobersek
Comment 9
2017-08-29 04:30:03 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 10
2017-08-29 04:30:36 PDT
<
rdar://problem/34130591
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug