Source/WebCore/crypto/keys/CryptoKeyEC.h
@@ -75,7 +75,7 @@ public:
     size_t keySizeInBits() const;
     NamedCurve namedCurve() const { return m_curve; }
     String namedCurveString() const;
-    PlatformECKey platformKey() { return m_platformKey; }
+    PlatformECKey platformKey() const { return m_platformKey; }
     static bool isValidECAlgorithm(CryptoAlgorithmIdentifier);
 
 private:
