Source/WebCore/crypto/mac/CryptoAlgorithmECDHMac.cpp
@@ -30,28 +30,20 @@
 
 #include "CommonCryptoUtilities.h"
 #include "CryptoKeyEC.h"
-#include "ScriptExecutionContext.h"
 
 namespace WebCore {
 
-void CryptoAlgorithmECDH::platformDeriveBits(Ref<CryptoKey>&& baseKey, Ref<CryptoKey>&& publicKey, size_t length, Callback&& callback, ScriptExecutionContext& context, WorkQueue& workQueue)
+std::optional<Vector<uint8_t>> CryptoAlgorithmECDH::platformDeriveBits(const CryptoKey& baseKey, const CryptoKey& publicKey)
 {
-    context.ref();
-    workQueue.dispatch([baseKey = WTFMove(baseKey), publicKey = WTFMove(publicKey), length, callback = WTFMove(callback), &context]() mutable {
-        auto& ecBaseKey = downcast<CryptoKeyEC>(baseKey.get());
-        auto& ecPublicKey = downcast<CryptoKeyEC>(publicKey.get());
+    auto& ecBaseKey = downcast<CryptoKeyEC>(baseKey);
+    auto& ecPublicKey = downcast<CryptoKeyEC>(publicKey);
 
-        std::optional<Vector<uint8_t>> result = std::nullopt;
-        Vector<uint8_t> derivedKey(ecBaseKey.keySizeInBits() / 8); // Per https://tools.ietf.org/html/rfc6090#section-4.
-        size_t size = derivedKey.size();
-        if (!CCECCryptorComputeSharedSecret(ecBaseKey.platformKey(), ecPublicKey.platformKey(), derivedKey.data(), &size))
-            result = WTFMove(derivedKey);
-
-        context.postTask([result = WTFMove(result), length, callback = WTFMove(callback)](ScriptExecutionContext& context) mutable {
-            callback(WTFMove(result), length);
-            context.deref();
-        });
-    });
+    std::optional<Vector<uint8_t>> result = std::nullopt;
+    Vector<uint8_t> derivedKey(ecBaseKey.keySizeInBits() / 8); // Per https://tools.ietf.org/html/rfc6090#section-4.
+    size_t size = derivedKey.size();
+    if (!CCECCryptorComputeSharedSecret(ecBaseKey.platformKey(), ecPublicKey.platformKey(), derivedKey.data(), &size))
+        result = WTFMove(derivedKey);
+    return result;
 }
 
 }
